--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dhiraj Kumar - Professional Portfolio</title>
+    <title>Dhiraj Kumar - Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container">
-        <!-- Professional Header Section -->
+        <!-- Header Section -->
         <section class="header-section">
             <h1>DHIRAJ KUMAR</h1>
             <p>Computer Science Engineering Student</p>
             <img src="image.png" alt="Professional Profile" class="profile-img" width="180px">
         </section>
 
-        <!-- Professional Education Section -->
+        <!-- Education Section -->
         <section class="info-section">
             <h2>Education</h2>
             <ul>
@@ -33,7 +33,7 @@
             </ul>
         </section>
 
-        <!-- Professional Skills Section -->
+        <!-- Skills Section -->
         <section class="info-section">
             <h2>Technical Skills</h2>
             <ul>
@@ -44,7 +44,7 @@
             </ul>
         </section>
 
-        <!-- Professional Projects Section -->
+        <!-- Projects Section -->
         <section class="info-section">
             <h2>Projects</h2>
             <div class="project-links">
@@ -55,5 +55,6 @@
     </div>
 <!--
 </body>
+
 
 </html>
